# web-scraper-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  utils.py
examples/: quickstart.py
tests/: conftest.py
web_scraper_ai/: __init__.py  scraper.py
